# htown_mania

./: .gitignore  Makefile  README.md  SERPAPI_READY.md  alembic.ini  deploy.sh  env.template  migration-job.yaml  pyproject.toml  requirements.txt  test_premailer.py  test_research.sh  test_research_simple.sh
alembic/: env.py  script.py.mako
alembic/versions/: 885d70cbecd3_initial_migration_create_events_table.py
app/adapters/agents/: __init__.py  planning_agent.py  promo_agent.py  reddit_events_agent.py  review_agents.py  search_agents.py
app/adapters/db/: bootstrap.py  models.py  repository.py  session.py
app/adapters/llm/: openai_llm.py
app/adapters/sms/: email_sms.py  (+1 more)
app/api/: auth.py  main.py
app/config/: settings.py
app/core/: di.py  di_deep_research.py
app/middleware/: session.py
app/utils/: security.py
app/workers/: run_daily_job.py
charts/houston-event-mania/: Chart.yaml  values.yaml
docs/: AGENTIC_ARCHITECTURE.md  AGENTIC_DIAGRAMS_README.md  AGENTIC_QUICK_REFERENCE.md  AGENTIC_SYSTEM.md  AGENTIC_SYSTEM_OVERVIEW.md  AGENTIC_USAGE_GUIDE.md  CHANGELOG.md  DEEP_RESEARCH.md  DEEP_RESEARCH_AGENT_DESIGN.md  DEEP_RESEARCH_USAGE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  EMAIL_WRESTLEMANIA.md  QUICK_START.md  README.md  SERPAPI.md  SERPAPI_SETUP.md  SERPAPI_SOLUTION.md  WRESTLING_TTS_GUIDE.md  architecture_diagram.mmd  deep_research_architecture.mmd  deep_research_flow.mmd  process_flow_diagram.mmd
frontend/neon/: index.html
infra/docker/: Dockerfile
infra/k8s/: cronjob.yaml  deployment.yaml  ingress.yaml  service.yaml
(+42 files in other folders)
